@@ -589,7 +589,9 @@ name|useScalar
 argument_list|()
 return|;
 block|}
-comment|/** 	 * Creates query that selects scalar value and uses default routing 	 * 	 * @since 4.1 	 */
+comment|/** 	 * Creates query that selects scalar value and uses default routing 	 * 	 * @since 4.1 	 * @deprecated since 4.2. Use {@link #arrayQuery(String)} 	 */
+annotation|@
+name|Deprecated
 specifier|public
 specifier|static
 name|SQLSelect
@@ -624,7 +626,44 @@ name|useScalar
 argument_list|()
 return|;
 block|}
-comment|/** 	 * Creates query that selects scalar values (as Object[]) and uses routing based on the 	 * provided DataMap name. 	 * @since 4.1 	 */
+comment|/** 	 *  Creates query that selects scalar value and uses default routing 	 * 	 *  @since 4.2 	 */
+specifier|public
+specifier|static
+name|SQLSelect
+argument_list|<
+name|Object
+index|[]
+argument_list|>
+name|arrayQuery
+parameter_list|(
+name|String
+name|sql
+parameter_list|)
+block|{
+name|SQLSelect
+argument_list|<
+name|Object
+index|[]
+argument_list|>
+name|query
+init|=
+operator|new
+name|SQLSelect
+argument_list|<>
+argument_list|(
+name|sql
+argument_list|)
+decl_stmt|;
+return|return
+name|query
+operator|.
+name|useScalar
+argument_list|()
+return|;
+block|}
+comment|/** 	 * Creates query that selects scalar values (as Object[]) and uses routing based on the 	 * provided DataMap name. 	 * @since 4.1 	 * @deprecated since 4.2. Use {@link #arrayQuery(String, String)} 	 */
+annotation|@
+name|Deprecated
 specifier|public
 specifier|static
 name|SQLSelect
@@ -668,7 +707,53 @@ name|useScalar
 argument_list|()
 return|;
 block|}
-comment|/** 	 * Creates query that selects scalar values (as Object[]) and uses default routing 	 * 	 * @since 4.1 	 */
+comment|/** 	 * Creates query that selects scalar values (as Object[]) and uses routing based on the 	 * provided DataMap name. 	 * 	 * @since 4.2 	 */
+specifier|public
+specifier|static
+name|SQLSelect
+argument_list|<
+name|Object
+index|[]
+argument_list|>
+name|arrayQuery
+parameter_list|(
+name|String
+name|sql
+parameter_list|,
+name|String
+name|dataMapName
+parameter_list|)
+block|{
+name|SQLSelect
+argument_list|<
+name|Object
+index|[]
+argument_list|>
+name|query
+init|=
+operator|new
+name|SQLSelect
+argument_list|<>
+argument_list|(
+name|sql
+argument_list|)
+decl_stmt|;
+name|query
+operator|.
+name|dataMapName
+operator|=
+name|dataMapName
+expr_stmt|;
+return|return
+name|query
+operator|.
+name|useScalar
+argument_list|()
+return|;
+block|}
+comment|/** 	 * Creates query that selects scalar values (as Object[]) and uses default routing 	 * 	 * @since 4.1 	 * @deprecated since 4.2. Use {@link #arrayQuery(String, Class, Class...)} 	 */
+annotation|@
+name|Deprecated
 specifier|public
 specifier|static
 name|SQLSelect
@@ -726,7 +811,67 @@ name|useScalar
 argument_list|()
 return|;
 block|}
-comment|/** 	 * Creates query that selects scalar values (as Object[]) and uses routing based on the 	 * provided DataMap name. 	 * 	 * @since 4.1 	 */
+comment|/** 	 * Creates query that selects scalar values (as Object[]) and uses default routing 	 * 	 * @since 4.2 	 */
+specifier|public
+specifier|static
+name|SQLSelect
+argument_list|<
+name|Object
+index|[]
+argument_list|>
+name|arrayQuery
+parameter_list|(
+name|String
+name|sql
+parameter_list|,
+name|Class
+argument_list|<
+name|?
+argument_list|>
+name|firstType
+parameter_list|,
+name|Class
+argument_list|<
+name|?
+argument_list|>
+modifier|...
+name|types
+parameter_list|)
+block|{
+name|SQLSelect
+argument_list|<
+name|Object
+index|[]
+argument_list|>
+name|query
+init|=
+operator|new
+name|SQLSelect
+argument_list|<>
+argument_list|(
+name|sql
+argument_list|)
+decl_stmt|;
+return|return
+name|query
+operator|.
+name|resultColumnsTypes
+argument_list|(
+name|firstType
+argument_list|)
+operator|.
+name|resultColumnsTypes
+argument_list|(
+name|types
+argument_list|)
+operator|.
+name|useScalar
+argument_list|()
+return|;
+block|}
+comment|/** 	 * Creates query that selects scalar values (as Object[]) and uses routing based on the 	 * provided DataMap name. 	 * 	 * @since 4.1 	 * @deprecated since 4.2. Use {@link #arrayQuery(String, String, Class, Class...)} 	 */
+annotation|@
+name|Deprecated
 specifier|public
 specifier|static
 name|SQLSelect
@@ -735,6 +880,73 @@ name|Object
 index|[]
 argument_list|>
 name|scalarQuery
+parameter_list|(
+name|String
+name|sql
+parameter_list|,
+name|String
+name|dataMapName
+parameter_list|,
+name|Class
+argument_list|<
+name|?
+argument_list|>
+name|firstType
+parameter_list|,
+name|Class
+argument_list|<
+name|?
+argument_list|>
+modifier|...
+name|types
+parameter_list|)
+block|{
+name|SQLSelect
+argument_list|<
+name|Object
+index|[]
+argument_list|>
+name|query
+init|=
+operator|new
+name|SQLSelect
+argument_list|<>
+argument_list|(
+name|sql
+argument_list|)
+decl_stmt|;
+name|query
+operator|.
+name|dataMapName
+operator|=
+name|dataMapName
+expr_stmt|;
+return|return
+name|query
+operator|.
+name|resultColumnsTypes
+argument_list|(
+name|firstType
+argument_list|)
+operator|.
+name|resultColumnsTypes
+argument_list|(
+name|types
+argument_list|)
+operator|.
+name|useScalar
+argument_list|()
+return|;
+block|}
+comment|/** 	 * Creates query that selects scalar values (as Object[]) and uses routing based on the 	 * provided DataMap name. 	 * 	 * @since 4.2 	 */
+specifier|public
+specifier|static
+name|SQLSelect
+argument_list|<
+name|Object
+index|[]
+argument_list|>
+name|arrayQuery
 parameter_list|(
 name|String
 name|sql
@@ -1196,12 +1408,46 @@ return|return
 name|this
 return|;
 block|}
+comment|/** 	 * @deprecated since 4.2 	 * Use {@link #param(String, Object)} 	 */
+annotation|@
+name|Deprecated
 specifier|public
 name|SQLSelect
 argument_list|<
 name|T
 argument_list|>
 name|params
+parameter_list|(
+name|String
+name|name
+parameter_list|,
+name|Object
+name|value
+parameter_list|)
+block|{
+name|params
+argument_list|(
+name|Collections
+operator|.
+name|singletonMap
+argument_list|(
+name|name
+argument_list|,
+name|value
+argument_list|)
+argument_list|)
+expr_stmt|;
+return|return
+name|this
+return|;
+block|}
+comment|/** 	 * @since 4.2 	 */
+specifier|public
+name|SQLSelect
+argument_list|<
+name|T
+argument_list|>
+name|param
 parameter_list|(
 name|String
 name|name
